Actualizacion daniel, cambio y creacion de algunos archivos

--- a/Proyecto/app/src/main/res/layout/activity_menu_inicial.xml
+++ b/Proyecto/app/src/main/res/layout/activity_menu_inicial.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="492dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="182dp"
-        android:text="Directorio"
+        android:text="@string/txdir"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginTop="537dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="46dp"
-        android:text="Tramites Municipales"
+        android:text="@string/txramun"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="337dp"
         android:layout_marginBottom="337dp"
-        android:text="Simulacion de creditos"
+        android:text="@string/txsimcre"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginTop="184dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="490dp"
-        android:text="Calculadora Registral"
+        android:text="@string/txcalregs"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
         android:layout_marginTop="337dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="337dp"
-        android:text="Valorizacion Comercial"
+        android:text="@string/txvalcom"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
         android:layout_marginTop="492dp"
         android:layout_marginEnd="235dp"
         android:layout_marginBottom="182dp"
-        android:text="Calculadora de impuestos"
+        android:text="@string/txcalimp"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,7 +109,7 @@
         android:layout_marginTop="184dp"
         android:layout_marginBottom="490dp"
         android:background="#000A81"
-        android:text="Contratos"
+        android:text="@string/txcon"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,19 +124,20 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="576dp"
-        android:text="B"
+        android:text="@string/txb"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.021" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputEditText"
         android:layout_width="269dp"
         android:layout_height="wrap_content"
-        android:hint="Buscar"
+        android:hint="@string/txbus"
         android:minHeight="48dp"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
