--- a/Proyecto/app/src/main/res/layout/activity_contratos2.xml
+++ b/Proyecto/app/src/main/res/layout/activity_contratos2.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="120dp"
         android:layout_marginBottom="440dp"
         android:background="#000A81"
-        android:text="Venta Exclusiva"
+        android:text="@string/txventexc"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginTop="250dp"
         android:layout_marginBottom="310dp"
         android:background="#000A81"
-        android:text="alquiler exclusivo"
+        android:text="@string/txalqexc"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginTop="380dp"
         android:layout_marginBottom="180dp"
         android:background="#000A81"
-        android:text="anticresis exclusiva"
+        android:text="@string/txantexc"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         android:layout_marginTop="510dp"
         android:layout_marginBottom="50dp"
         android:background="#000A81"
-        android:text="reserva venta"
+        android:text="@string/txresven"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="50dp"
         android:background="#000A81"
-        android:text="reserva alquiler"
+        android:text="@string/txresalq"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="180dp"
         android:background="#000A81"
-        android:text="anticresis no exclusiva"
+        android:text="@string/txantnoexc"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +119,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="310dp"
         android:background="#000A81"
-        android:text="alquiler no excusivo"
+        android:text="@string/txalqnoexc"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +137,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="440dp"
         android:background="#000A81"
-        android:text="venta no exclusiva"
+        android:text="@string/txventnoexc"
         app:backgroundTint="#A81A17"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +152,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
         android:layout_marginTop="50dp"
-        android:text="Generador de contratos"
+        android:text="@string/txtitcontratos"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
