--- a/Proyecto/app/src/main/res/layout/activity_main.xml
+++ b/Proyecto/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_claro"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btn_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="12dp"
         android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
