--- a/Proyecto/app/src/main/res/layout/activity_registro_usua.xml
+++ b/Proyecto/app/src/main/res/layout/activity_registro_usua.xml
@@ -6,139 +6,222 @@
     android:layout_height="match_parent"
     tools:context=".registro_usua">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
 
-    <TextView
-        android:id="@+id/txtV_titureistroUsuariosRU"
-        android:layout_width="202dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/txtv_tituloRU"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/txtV_idRU"
-        android:layout_width="90dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="34dp"
-        android:text="@string/txtv_idRU"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtV_titureistroUsuariosRU" />
-    <EditText
-        android:id="@+id/edtn_idRU"
-        android:layout_width="305dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="42dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtV_idRU" />
+        </LinearLayout>
+    </ScrollView>
 
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
-    <TextView
-        android:id="@+id/txtV_nombreRU"
-        android:layout_width="90dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="18dp"
-        android:text="@string/txtv_nombreRU"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtn_idRU" />
-    <EditText
-        android:id="@+id/edt_nombreRU"
-        android:layout_width="312dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="42dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtV_nombreRU" />
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Registro de Usuario"
+            android:textAlignment="center"
+            android:textColor="#A81A17"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txtV_correoRU"
-        android:layout_width="148dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/txtv_correoERU"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_nombreRU" />
-    <EditText
-        android:id="@+id/edtema_correoRU"
-        android:layout_width="313dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="42dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtV_correoRU" />
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="58dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="DNI:"
+                android:textAlignment="gravity"
+                android:textColor="#0C0C0C"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txtV_contraRU"
-        android:layout_width="90dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="17dp"
-        android:text="@string/txtv_contrasenaRU"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtema_correoRU" />
-    <EditText
-        android:id="@+id/edtpss_contraRU"
-        android:layout_width="311dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="42dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtV_contraRU" />
+            <EditText
+                android:id="@+id/editTextPhone"
+                android:layout_width="343dp"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A81A17"
+                android:ems="10"
+                android:inputType="phone"
+                android:textSize="14sp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="58dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtV_confirContraRU"
-        android:layout_width="158dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="17dp"
-        android:text="@string/txtv_confirmarcontraRU"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtpss_contraRU" />
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Nombre:"
+                android:textAlignment="gravity"
+                android:textColor="#0C0C0C"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
+            <EditText
+                android:id="@+id/editTextTextPersonName2"
+                android:layout_width="343dp"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A81A17"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:textSize="14sp" />
+        </LinearLayout>
 
-    <EditText
-        android:id="@+id/edtpss_confirContraRU"
-        android:layout_width="311dp"
-        android:layout_height="42dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="52dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/btn_registrarUsuarioRU"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="58dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_registrarUsuarioRU"
-        android:layout_width="132dp"
-        android:layout_height="61dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="117dp"
-        android:text="@string/txtbregistroRU"
-        app:backgroundTint="#A81A17"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-    <Button
-        android:id="@+id/btn_cancelarRU"
-        android:layout_width="117dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="117dp"
-        app:backgroundTint="#A81A17"
-        android:text="@string/txtbcancelarRU"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Correo Electronico:"
+                android:textAlignment="gravity"
+                android:textColor="#0C0C0C"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/editTextTextEmailAddress"
+                android:layout_width="343dp"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A81A17"
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="58dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Contraseña:"
+                android:textAlignment="gravity"
+                android:textColor="#0C0C0C"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/editTextTextPassword2"
+                android:layout_width="343dp"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A81A17"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="58dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Confirmar contraseña:"
+                android:textAlignment="gravity"
+                android:textColor="#0C0C0C"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/editTextTextPassword3"
+                android:layout_width="343dp"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A81A17"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="59dp"
+
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:textAlignment="center">
+
+            <Button
+                android:id="@+id/btnCancelar"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start|center_vertical"
+
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A81A17"
+                android:text="Cancelar"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="285dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start|center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:backgroundTint="#A81A17"
+                android:text="Registrar Usuario"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
