--- a/Proyecto/app/src/main/res/layout/activity_login.xml
+++ b/Proyecto/app/src/main/res/layout/activity_login.xml
@@ -93,6 +93,15 @@
             android:textSize="10sp"
             android:textStyle="bold" />
 
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp" />
+
         <Button
             android:id="@+id/button2"
             android:layout_width="287dp"
